--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
    "type": "commonjs",
    "devDependencies": {
       "@types/bcrypt": "^5.0.1",
+      "@types/cors": "^2.8.16",
       "@types/express": "^4.17.20",
       "@types/jsonwebtoken": "^9.0.4",
       "@types/node": "^20.8.9",
